--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "mithril": "^1.1.6",
-    "poscore": "git+ssh://git@github.com/monommania/poscore.git",
-    "print-js": "^1.0.40"
+    "poscore": "git+ssh://git@github.com/monommania/poscore.git"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
